--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/mdx": "^10.0.3",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
+    "gray-matter": "^4.0.2",
     "next": "10.0.3",
-    "next-themes": "0.0.10",
+    "next-seo": "^4.17.0",
     "postcss": "^8.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
