--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "^10.1.0",
     "gray-matter": "^4.0.2",
     "next": "10.0.3",
+    "next-mdx-remote": "^1.0.1",
     "next-seo": "^4.17.0",
     "postcss": "^8.2.1",
     "react": "17.0.1",
