--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "@next/mdx": "^10.0.3",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
+    "globby": "^11.0.1",
     "gray-matter": "^4.0.2",
     "next": "10.0.3",
     "next-mdx-remote": "^1.0.1",
     "next-seo": "^4.17.0",
     "postcss": "^8.2.1",
+    "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "tailwindcss": "^2.0.2"
