--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,6 +23,11 @@
     "isolatedModules": true,
     "jsx": "preserve"
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "scripts/generate-sitemap.js"
+  ],
   "exclude": ["node_modules"]
 }
