--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@mdx-js/react": "^1.6.22",
     "@next/mdx": "^10.0.3",
     "@tailwindcss/typography": "^0.3.1",
     "autoprefixer": "^10.1.0",
@@ -23,6 +24,7 @@
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
+    "@types/mdx-js__react": "^1.5.3",
     "@types/node": "^14.14.14",
     "@types/react": "^17.0.0",
     "typescript": "^4.1.3"
