--- a/package.json
+++ b/package.json
@@ -14,13 +14,14 @@
     "autoprefixer": "^10.1.0",
     "globby": "^11.0.1",
     "gray-matter": "^4.0.2",
-    "next": "10.0.3",
+    "next": "^10.0.9",
     "next-mdx-remote": "^1.0.1",
     "next-seo": "^4.17.0",
     "postcss": "^8.2.1",
     "prettier": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-scrollbar-size": "^3.2.0",
     "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
